--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -1,3 +1,21 @@
-.image {
-  width: 100%;
+@use "../../styles/partials/reset";
+@use "../../styles/partials/typography" as *;
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+
+.video-player {
+  &__wrapper {
+    @include tablet {
+      background-color: black;
+      padding: 0 2rem;
+    }
+    @include desktop {
+      padding: 0 12rem;
+      margin: 0 auto;
+    }
+  }
+  &__image {
+    width: 100%;
+    height: auto;
+  }
 }
