--- a/src/components/VideoDetails/VideoDetails.scss
+++ b/src/components/VideoDetails/VideoDetails.scss
@@ -1,1 +1,84 @@
+@use "../../styles/partials/reset";
+@use "../../styles/partials/typography" as *;
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
+.video {
+  &__title {
+    margin: 0;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid grey;
+  }
+  &__specs {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid green;
+    padding: 1rem 0;
+    border-bottom: 1px solid grey;
+  }
+  &__credentials {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid blue;
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+  &__author {
+    margin-right: 2.5rem;
+    @include subheader;
+  }
+  &__date {
+    color: grey;
+    @include subheader;
+    font-weight: 400;
+  }
+  &__stats {
+    width: 45%;
+    border: 1px solid yellow;
+    @include tablet {
+      display: flex;
+      justify-content: flex-end;
+      width: 100%;
+    }
+  }
+
+  &__button {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // background-color: $primary-color-blue;
+    // border: 1px solid $primary-color-blue;
+    // color: $primary-color-white;
+    // height: 2.5rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    @include tablet {
+      width: 50%;
+      margin-right: 1rem;
+    }
+  }
+  &__upload-icon {
+    fill: $primary-color-white;
+    width: 20px;
+    height: 20px;
+  }
+  &__button-text {
+    color: $primary-color-white;
+    @include body-copy;
+    text-align: center;
+    flex-grow: 1;
+  }
+
+  &__text {
+    padding: 1rem 0;
+  }
+}
