Feat: styling and refactoring done

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,8 @@
 @use "./styles/partials/typography" as *;
 @use "./styles/partials/variables" as *;
 @use "./styles/partials/mixins" as *;
+
+body {
+  color: $primary-color-black;
+  font-family: "Avenir Next LT Pro", sans-serif;
+}
