--- a/src/components/VideoComments/VideoComments.scss
+++ b/src/components/VideoComments/VideoComments.scss
@@ -3,15 +3,19 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
-.video-section {
-  border: 1px solid blue;
-}
-
 .video-comments {
   color: black;
-  border: 1px solid red;
+  border-bottom: 1px solid $secondary-color-mercury;
   display: flex;
-  padding: 1.5rem 0;
+  padding: 1rem 0;
+  @include tablet {
+    padding: 1.5rem 0;
+  }
+  @include desktop {
+    padding: 1rem 0;
+    border-bottom: none;
+    border-top: 1px solid $secondary-color-mercury;
+  }
 
   &__image {
     width: 2.25rem;
@@ -19,9 +23,8 @@
     border-radius: 50%;
     margin-right: 1rem;
     background-color: $secondary-color-mercury;
-    @include tablet {
-      width: 3.5rem;
-      height: 3.5rem;
+    @include desktop {
+      margin-right: 2rem;
     }
   }
 
@@ -49,5 +52,9 @@
   &__date {
     color: $primary-color-silver;
     font-weight: 300;
+  }
+
+  &__message {
+    margin: 0.5rem 0 0;
   }
 }
