--- a/src/components/VideoDetails/VideoDetails.scss
+++ b/src/components/VideoDetails/VideoDetails.scss
@@ -7,21 +7,32 @@
   &__title {
     margin: 0;
     padding-bottom: 1rem;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid $secondary-color-mercury;
+    @include page-header;
+    color: $secondary-color-black;
+    @include tablet {
+      border-bottom: none;
+    }
   }
+
   &__specs {
     display: flex;
     justify-content: space-between;
-    border: 1px solid green;
     padding: 1rem 0;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid $secondary-color-mercury;
+    @include tablet {
+      padding-top: 0;
+    }
+    @include desktop {
+      padding-right: 1rem;
+    }
   }
+
   &__credentials {
-    width: 45%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 1px solid blue;
     @include tablet {
       display: flex;
       flex-direction: row;
@@ -30,18 +41,23 @@
       align-items: center;
     }
   }
+
   &__author {
-    margin-right: 2.5rem;
+    color: $secondary-color-black;
     @include subheader;
+    @include tablet {
+      margin-right: 2.5rem;
+    }
   }
+
   &__date {
-    color: grey;
+    color: $primary-color-silver;
     @include subheader;
     font-weight: 400;
   }
+
   &__stats {
-    width: 45%;
-    border: 1px solid yellow;
+    width: 50%;
     @include tablet {
       display: flex;
       justify-content: flex-end;
@@ -49,36 +65,40 @@
     }
   }
 
-  &__button {
-    width: 100%;
+  &__wrapper {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    // background-color: $primary-color-blue;
-    // border: 1px solid $primary-color-blue;
-    // color: $primary-color-white;
-    // height: 2.5rem;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    @include tablet {
-      width: 50%;
-      margin-right: 1rem;
+    &--top {
+      margin-bottom: 0.5rem;
+      @include tablet {
+        margin-bottom: 0;
+        margin-right: 1.5rem;
+      }
     }
   }
-  &__upload-icon {
-    fill: $primary-color-white;
-    width: 20px;
-    height: 20px;
+
+  &__icon {
+    margin-right: 0.5rem;
   }
+
   &__button-text {
-    color: $primary-color-white;
-    @include body-copy;
-    text-align: center;
-    flex-grow: 1;
+    margin: 0;
+    color: $primary-color-silver;
   }
 
   &__text {
     padding: 1rem 0;
+    @include desktop {
+      padding-right: 1rem;
+    }
+  }
+
+  &__description {
+    margin: 0;
+    color: $primary-color-black;
+    @include body-copy;
+    @include tablet {
+      margin: 0.5rem 0;
+    }
   }
 }
