--- a/src/components/NewComment/NewComment.scss
+++ b/src/components/NewComment/NewComment.scss
@@ -4,20 +4,39 @@
 @use "../../styles/partials/mixins" as *;
 
 .comments {
-  border: 1px solid red;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid $secondary-color-mercury;
   padding-bottom: 1rem;
+  width: 100%;
+  @include tablet {
+    padding-bottom: 1.5rem;
+  }
+  @include desktop {
+    padding-right: 1rem;
+    border-bottom: none;
+  }
   &__subcontainer {
     display: flex;
     justify-content: space-around;
   }
   &__count {
-    margin: 1rem 0 1.5rem;
+    margin: 0.5rem 0 1.5rem;
     @include subheader;
   }
+
   &__title {
     margin: 0;
     margin-left: 3.25rem;
+    @include body-copy;
+    font-weight: 600;
+    color: $secondary-color-mercury;
+    padding-bottom: 0.25rem;
+    @include tablet {
+      margin-left: 3.5rem;
+      font-size: 0.8125rem;
+    }
+    @include desktop {
+      margin-left: 4.5rem;
+    }
   }
 
   &__image {
@@ -29,6 +48,9 @@
       width: 2.5rem;
       height: 2.5rem;
     }
+    @include desktop {
+      margin-right: 2rem;
+    }
   }
 }
 
@@ -37,6 +59,7 @@
   @include tablet {
     display: flex;
   }
+
   &__area {
     background-color: $secondary-color-alabaster;
     padding: 1rem;
@@ -57,7 +80,11 @@
       margin-right: 1.75rem;
       padding: 0.55rem 1rem;
     }
+    @include desktop {
+      width: 25rem;
+    }
   }
+
   &__button {
     width: 100%;
     display: flex;
@@ -73,11 +100,25 @@
     @include tablet {
       width: 30%;
     }
+    @include desktop {
+      padding: 0 0.5rem;
+    }
   }
 
   &__comment-icon {
     fill: $primary-color-white;
     width: 20px;
     height: 20px;
+  }
+
+  &__text {
+    color: $primary-color-white;
+    @include body-copy;
+    text-align: center;
+    font-weight: 600;
+    flex-grow: 1;
+    @include desktop {
+      padding: 0 1.75rem;
+    }
   }
 }
