Feat: diving deeper done and project ready for development review

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -17,7 +17,7 @@
   }
 }
 
-.left {
+.main__details {
   @include desktop {
     padding-top: 1.5rem;
     border-right: 1px solid $secondary-color-mercury;
