--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -92,6 +92,11 @@
     border: none;
     outline: none;
     width: 100%;
+    &::placeholder {
+      color: $primary-color-black;
+      font-family: "Avenir Next LT Pro", sans-serif;
+      @include body-copy;
+    }
   }
 
   &__image {
