--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -17,5 +17,12 @@
   &__image {
     width: 100%;
     height: auto;
+    object-fit: cover;
+    @include tablet {
+      height: 27rem;
+    }
+    @include desktop {
+      height: 32rem;
+    }
   }
 }
