--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -16,7 +16,7 @@
   }
   &__image {
     width: 100%;
-    height: auto;
+    height: 12rem;
     object-fit: cover;
     @include tablet {
       height: 27rem;
