--- a/src/components/VideosList/VideosList.scss
+++ b/src/components/VideosList/VideosList.scss
@@ -27,11 +27,13 @@
 
   &__item {
     display: flex;
+    color: $primary-color-black;
     background-color: $primary-color-white;
     border: none;
     cursor: pointer;
     width: 100%;
     padding: 0;
+    text-decoration: none;
     margin-bottom: 1rem;
   }
 
